media/unsupported-rtsp.html is failing https://bugs.webkit.org/show_bug.cgi?id=118327

Reviewed by Eric Carlson.

Fixes the media/unsupported-rtsp.html test.

Set the contentType field of contentInformationRequest in order to trigger AVFoundation to
notice that loading failed and generate an error.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::WebCoreAVFResourceLoader::notifyFinished):

Canonical link: https://commits.webkit.org/136338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152324 268f45cc-cd09-0410-ab3c-d52691b4dbfc